# deep-research-agents

./: README.md  example_usage.py  main.py  manager_agent.py  planner_agent.py  pyproject.toml  questioner_agent.py  research_manager.py  schema.py  tool_registry.py
ai_agents/: manager_agent.py
tools/: base.py  email_writer.py  followup_question.py  initial_question.py  question_generator.py  report_writer.py  search.py  search_agent.py  search_executor.py  send_email.py  tool_wrapper.py
